# RayTracer

./: .gitignore  CMakeLists.txt  README.txt  main.cpp  test.ppm
0/0/1/: CMakeLists.txt
0/0/1/src/: draw.h  ray.h  scene.h
archive/: save_ppm.hpp
archive/0/0/1/src/: camera.h  draw.cpp  main.cpp  ray.cpp
assets/: btoleda_test.json  cornell_box.json  cornell_box_al.json  cornell_box_empty_pl.json  test_area_light1.json  test_scene1.json  test_scene1B.json  test_scene2.json  test_scene2.ppm  test_scene3.json  test_scene3B.json
src/: RayTracer.cpp  RayTracer.h  area_light.cpp  area_light.h  core.cpp  core.h  eye.h  i_hittable.h  main.cpp  material.cpp  material.h  point_light.cpp  point_light.h  ray.h  ray_tracer.cpp  ray_tracer.h  rectangle.cpp  rectangle.h  scene.cpp  scene.h  scene_light.h  scene_object.h  sphere.cpp  sphere.h  structures.h  triangle.cpp  triangle.h  viewport.h
